# bargo

./: CHANGELOG.md  Cargo.toml  README.md  ZKHACK.md  install_dev.sh
.github/workflows/: ci.yml
crates/bargo-core/: Cargo.toml
crates/bargo-core/src/: backend.rs  cli.rs  config.rs  lib.rs  runner.rs
crates/bargo-core/src/backends/: bb.rs  foundry.rs  garaga.rs  mod.rs  nargo.rs
crates/bargo-core/src/commands/: build.rs  check.rs  clean.rs  common.rs  doctor.rs  mod.rs  rebuild.rs
crates/bargo-core/src/commands/cairo/: backend.rs  bb_operations.rs  directories.rs  error.rs  garaga.rs  mod.rs  workflow.rs
crates/bargo-core/src/commands/evm/: backend.rs  bb_operations.rs  directories.rs  error.rs  foundry.rs  mod.rs  workflow.rs
crates/bargo-core/src/util/: error.rs  format.rs  io.rs  log.rs  mod.rs  paths.rs  summary.rs  tests.rs  timer.rs
src/: cli.rs  main.rs  util.rs
src/backends/: bb.rs  foundry.rs  garaga.rs  mod.rs  nargo.rs
src/commands/: build.rs  cairo.rs  check.rs  clean.rs  doctor.rs  mod.rs  prove.rs  rebuild.rs  verifier.rs  verify.rs
src/commands/cairo/: bb_operations.rs  data.rs  declare.rs  deploy.rs  directories.rs  garaga.rs  gen_cmd.rs  mod.rs  scarb.rs  verify_onchain.rs  workflow.rs
src/commands/evm/: bb_operations.rs  gen.rs  (+7 more)
src/util/: backends.rs  directories.rs  mod.rs  output.rs  paths.rs  rebuild.rs  summary.rs  tests.rs
tests/: TEST_COVERAGE.md  auto_declare.rs  basic_integration.rs  build_integration.rs  cairo_integration.rs  cli_smoke.rs  error_context.rs  integration.rs  runner_history.rs  runner_history.rs.disabled
(+4 files in other folders)
