[workspace]
members = [".", "crates/bargo-core"]

[package]
name = "bargo"
version = "0.2.0"
edition = "2024"

[dependencies]
bargo-core = { path = "crates/bargo-core", default-features = false }
color-eyre = "0.6.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2"
predicates = "3"
serde_json = "1.0"
assert_fs = "1.1"
path-slash = "0.2"

[features]
default = ["cairo", "evm-foundry"]
cairo = ["bargo-core/cairo"]
evm-foundry = ["bargo-core/evm-foundry"]
runner-history-tests = []
