[package]
name = "bargo-core"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
dotenv = "0.15"
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
atty = "0.2.14"
which = "4.4"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["cairo", "evm-foundry"]
cairo = []
evm-foundry = []
